# emacs-loc-changes

./: .gitignore  .travis.yml  Carton  Cask  Makefile.am  README  README.md  THANKS  cask-install.el  configure.ac  el-get-install.el  install-from-git.sh  loc-changes.el
test/: .gitignore  Makefile  Makefile.am  make-check-filter.rb  sample.txt  test-basic.el
